--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-datepicker-dialog",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "This library provides the cross-platform components for to open the date picker dialogs in effective way. It uses the native DatePickerAndroid & DatePickerIOS components. It will work for both ios & android.",
   "main": "main-index.js",
   "scripts": {
@@ -43,6 +43,7 @@
     "jest": "17.0.3",
     "jest-react-native": "17.0.3",
     "react-test-renderer": "15.3.2",
-    "moment": "2.x.x"
+    "moment": "2.11.2",
+    "prop-types": "^15.6.0"
   }
 }
